added notblank validation
